# SecondOpinion-MCP

./: .gitignore  README.ja.md  README.md  config.example.toml  pyproject.toml
docs/handoff/: 2026-06-13-delegate-task-resilience.md  2026-06-13-philharmonic-backport-delegation-blocked.md  2026-06-21-silence-pattern-fix.md
src/secondopinion_mcp/: __init__.py  config.py  opencode_client.py  server.py
tests/: config_validation.py  deferred_session.py  lifecycle.py  recovery_live.py  smoke.py  watchdog.py
