[project]
name = "secondopinion-mcp"
version = "0.1.0"
description = "MCP server that lets coding agents call external LLMs (via opencode) for second opinions and subagent delegation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "May Kirihara" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
secondopinion-mcp = "secondopinion_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secondopinion_mcp"]
